Styling improvements - Changed state of nav menu when in corresponding section - Changed image and its position - Added icons for tech stack

--- a/main.css
+++ b/main.css
@@ -20,11 +20,14 @@ body {
   width: 100%;
 }
 
-/* Navbar */
+/* Navbar
+  ==========================================================================
+*/
 
 header {
   position: fixed;
   width: 100%;
+  height: 55px;
   padding-left: 20px;
   padding-right: 20px;
   background: #ffffff;
@@ -38,10 +41,9 @@ header .logo {
   padding-top: 15px;
 }
 
-header .navbar {
+.navbar {
   float: right;
-  height: 50px;
-  padding-top: 5px;
+  height: 100%;
 }
 
 .navbar a {
@@ -53,16 +55,21 @@ header .navbar {
   color: #E31B6D;
 }
 
+.nav-item {
+  transition: background 0.5s;
+}
+
 .nav-links {
+  height: 100%;
   list-style: none;
   display: flex;
 }
 
 .nav-item a {
-  color: #210203;
+  /* color: #210203; */
   font-size: 1.6em;
   display: inline-block;
-  padding: 10px 15px;
+  padding: 15px 15px;
   text-decoration: none;
 } 
 
@@ -74,6 +81,11 @@ header .navbar {
   color: #E31B6D;
 }
 
+.active {
+  color: #E31B6D !important;
+  background: #e2e2e2;
+}
+
 .hamburger-menu {
   display: none;
 }
@@ -82,18 +94,21 @@ header .navbar {
   margin: 0 auto;
 }
 
-/* Home section */
+/* Home
+  ==========================================================================
+*/
 
 #home {
   height: 100vh;
+  display: flex;
+  align-items: center;
 }
 
 .intro {
-  padding-top: 40vh;
-  padding-left: 100px;
-  font-size: 3em;
-  width: 750px;
-  max-width: 100%;
+  color: #000;
+  font-size: 2.8em;
+  padding-left: 80px;
+  max-width: 50%;
 }
 
 .highlight {
@@ -101,33 +116,81 @@ header .navbar {
   text-decoration: none;
 }
 
+.fade-in {
+  margin: 15px;
+  display: inline-block;
+  animation: fadeIn ease 2s;
+  -webkit-animation: fadeIn ease 2s;
+  -moz-animation: fadeIn ease 2s;
+  -o-animation: fadeIn ease 2s;
+  -ms-animation: fadeIn ease 2s;
+  }
+  @keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+  }
+  
+  @-moz-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+  }
+  
+  @-webkit-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+  }
+  
+  @-o-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+  }
+  
+  @-ms-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+  }
+
 /* About section */
 
 #about {
   text-align: center;
   background: #e2e2e2;
+  padding-bottom: 30px;
 }
 
 .h3 {
-  padding-top: 30px;
+  padding-top: 25px;
+  padding-bottom: 10px;
   font-size: 2.5em;
+}
+
+.about-h3 {
+  padding-top: 35px;
+}
+
+.my-photo {
+  /* float: right;
+  margin-right: 70px; */
+  width: 350px;
+  height: 450px;
+  border-radius: 50%;
+  margin: 30px;
 }
 
 .about-contents {
   padding-top: 50px;
   padding-left: 20px;
   padding-right: 20px;
-  max-width: 850px;
+  max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
 }
 
-#my-photo {
-  width: 250px;
-  height: 250px;
-  border-radius: 50%;
-  padding: 25px;
-  margin: 10px;
+.about-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 20px;
 }
 
 .description {
@@ -152,9 +215,59 @@ header .navbar {
   text-decoration: underline;
 }
 
+.dev-link:hover {
+  text-decoration: underline;
+}
+
+/* Skills
+  ==========================================================================
+*/
+
+.skills {
+  margin: 20px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.skill-desc {
+  width: 70%;
+  margin: 0 auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.skill-icons {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 20px;
+}
+
+.skill-item {
+  margin: 15px;
+}
+
+.skill-name {
+  padding: 10px;
+  font-size: 1.5em;
+}
+
+.icon {
+  display: inline-block;
+  width: 10em;
+  height: 10em;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
+}
+
+.svg {
+  display: none;
+}
+
 .coding-stats {
-  padding: 20px;
-  margin-bottom: 20px;
+  padding: 30px;
 }
 
 .coding-stats a img {
@@ -163,7 +276,9 @@ header .navbar {
   max-height: 500px;
 }
 
-/* Projects section */
+/* Projects Section
+  ==========================================================================
+*/
 
 #projects {
   margin-bottom: 50px;
@@ -171,7 +286,7 @@ header .navbar {
 
 .projects-heading {
   text-align: center;
-  padding-top: 120px;
+  padding-top: 100px;
   padding-bottom: 30px;
 }
 
@@ -255,12 +370,14 @@ header .navbar {
   background-position: center center;
 }
 
-/* Contact section */
+/* Contact Section
+  ==========================================================================
+*/
 
 #contact {
   width: 100%;
-  padding-top: 70px;
-  padding-bottom: 25px;
+  padding-top: 60px;
+  padding-bottom: 50px;
   text-align: center;
   background: #e2e2e2;
 }
@@ -316,7 +433,7 @@ header .navbar {
 .submit-btn {
   width: 150px;
   height: 40px;
-  margin-top: 10px;
+  margin-top: 20px;
   margin-left: 350px;
   display: block;
   cursor: pointer;
@@ -346,7 +463,9 @@ header .navbar {
   background: #507DBC;
 }
 
-/* Footer */
+/* Footer
+  ==========================================================================
+*/
 
 footer {
   background: #507DBC;
@@ -355,8 +474,8 @@ footer {
 
 .social-links {
   color: #ffffff;
-  padding-top: 30px;
-  padding-bottom: 20px;
+  padding-top: 20px;
+  padding-bottom: 15px;
 }
 
 footer li {
@@ -378,7 +497,7 @@ footer li a:hover {
 .footnote {
   color: #ffffff;
   font-size: 1.4em;
-  padding-bottom: 30px;
+  padding-bottom: 20px;
 }
 
 @media screen and (max-width: 600px) {
@@ -451,6 +570,35 @@ footer li a:hover {
     padding-bottom: 110px;
     font-size: 1.8em;
     width: 100%;
+    max-width: 100%;
+  }
+
+  .about-wrap {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding-top: 20px;
+    padding-bottom: 30px;
+  }
+
+  .my-photo {
+    width: 100%;
+    height: auto;
+    margin: 0;
+    max-width: 100%;
+  }
+
+  .skill-icons {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    margin: 20px;
+    max-width: 100%;
+    /* padding-top: 30px; */
+  }
+
+  .contact-link {
+    padding-bottom: 0;
   }
 
   .coding-stats a img {
