--- a/main.scss
+++ b/main.scss
@@ -40,7 +40,7 @@ body {
 .hero-img {
 	width: 200px;
 	border-radius: 50%;
-	margin: 2rem 0;
+	margin: 3.5rem 0 2rem 0;
 }
 
 #about {
@@ -85,7 +85,8 @@ body {
 }
 
 .project-img {
-	width: 50%;
+	width: 576px;
+	height: 285px;
 	border-radius: 5px;
 	box-shadow: 0 0.5em 1em -0.125em rgb(10 10 10 / 10%), 0 0px 0 1px rgb(10 10 10 / 2%);
 }
@@ -95,8 +96,16 @@ body {
 }
 
 .send-message {
+	color: #fff;
 	width: 100%;
 	padding: 20px;
+	border: none;
+	background-color: #3e8ed0;
+	&:hover {
+		color: #fff;
+		opacity: .9;
+		border: none;
+	}
 }
 
 .footer {
